Fix separation of admin css on assignments; prevent headings from wrapping.

--- a/src/main/resources/scss/course/components/_assignments.scss
+++ b/src/main/resources/scss/course/components/_assignments.scss
@@ -35,28 +35,29 @@
 					color: $tertiary-grey;
 				}
 			}
-		}
-		.assignment-item {
-			$iconsize: 28px;
-			padding-left: 2.4rem;
-			&::after {
-				content: '';
-				@extend %icon-assignment-due;
-				width: $iconsize;
-				height: $iconsize;
-				margin-right:1em;
-			}
-			&.late {
+			.assignment-item {
+				display: flex;
+				justify-content: space-between;
+				$iconsize: 28px;
+				padding-left: 2.4rem;
 				&::after {
-					@extend %icon-assignment-late;
+					content: '';
+					@extend %icon-assignment-due;
+					width: $iconsize;
+					height: $iconsize;
+					margin-right:1em;
+				}
+				&.late {
+					&::after {
+						@extend %icon-assignment-late;
+					}
 				}
 			}
 		}
 	}
 
 	.assignment-item {
-		display: flex;
-		justify-content: space-between;
+		display: block;
 		color: inherit;
 		position: relative;
 		padding-left: 2rem;
@@ -136,7 +137,8 @@
     	font-weight: 700;
 		color: $tertiary-grey;
 		& > * {
-			padding: $cellpadding ($cellpadding * 3) ;
+			padding: $cellpadding ($cellpadding * 3);
+			white-space: nowrap;
 		}
 		.sorted {
 			$bordersize: .5em;
